# ttwm

./: Cargo.toml  LICENSE  README.md  config.toml.example
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  agentic-testing.md  state-machines.md  testing.md
src/: config.rs  event.rs  ewmh.rs  icon.rs  ipc.rs  ipc_handler.rs  layout.rs  main.rs  monitor.rs  render.rs  startup.rs  state.rs  tab_bar.rs  tracing.rs  types.rs  urgent.rs  window_query.rs  workspaces.rs
tests/: integration.rs
