[package]
name = "ttwm"
version = "0.1.0"
edition = "2021"
description = "A tabbed tiling window manager for X11, inspired by Notion"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/ttwm"

[dependencies]
# X11 bindings - pure Rust implementation
x11rb = { version = "0.13", features = ["randr", "xinerama", "cursor"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Arena-based tree storage
slotmap = "1.0"

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Image encoding for screenshots (use minimal features to avoid dependency issues)
image = { version = "0.24", default-features = false, features = ["png"] }

# Configuration file support
toml = "0.8"
dirs = "5"

[[bin]]
name = "ttwm"
path = "src/main.rs"

[[bin]]
name = "ttwmctl"
path = "src/bin/ttwmctl.rs"
