[package]
name = "ttwm"
version = "0.1.0"
edition = "2021"
description = "A tabbed tiling window manager for X11, inspired by Notion"
license = "MIT"
authors = ["Matt Adereth <adereth@gmail.com>"]
repository = "https://github.com/adereth/ttwm"

[dependencies]
# X11 bindings - pure Rust implementation
x11rb = { version = "0.13", features = ["randr", "xinerama", "cursor"] }

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Arena-based tree storage
slotmap = "1.0"

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Image encoding for screenshots (use minimal features to avoid dependency issues)
image = { version = "0.24", default-features = false, features = ["png"] }

# Configuration file support
toml = "0.8"
dirs = "5"

# Font rendering
freetype-rs = "0.35"

# Lazy static initialization
once_cell = "1.19"

# Shell path expansion for startup commands
shellexpand = "3"

# POSIX system calls (for process detachment)
libc = "0.2"

[dev-dependencies]
# Image comparison for screenshot regression tests
image = { version = "0.24", default-features = false, features = ["png"] }

[[bin]]
name = "ttwm"
path = "src/main.rs"

[[bin]]
name = "ttwmctl"
path = "src/bin/ttwmctl.rs"
